cluster/apps/gitlab/gitlab/garage/networkpolicies/garage.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: gitlab-garage
  namespace: gitlab
spec:
  description: "Policy for gitlab-garage"
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: garage
      app.kubernetes.io/instance: gitlab-garage
  egress:
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
  ingress:
    - fromEndpoints:
        - matchLabels:
            app: webservice
            release: gitlab
            "k8s:io.kubernetes.pod.namespace": gitlab
        - matchLabels:
            app: sidekiq
            release: gitlab
            "k8s:io.kubernetes.pod.namespace": gitlab
        - matchLabels:
            app: registry
            release: gitlab
            "k8s:io.kubernetes.pod.namespace": gitlab
        - matchLabels:
            app: toolbox
            release: gitlab
            "k8s:io.kubernetes.pod.namespace": gitlab
        - matchLabels:
            app.kubernetes.io/name: gitlab-backup-mirror
            app.kubernetes.io/component: job
            "k8s:io.kubernetes.pod.namespace": gitlab
        - matchLabels:
            app.kubernetes.io/instance: gitlab-garage
            app.kubernetes.io/name: garage
            "k8s:io.kubernetes.pod.namespace": gitlab
        - matchLabels:
            app: migrations
            release: gitlab
            "k8s:io.kubernetes.pod.namespace": gitlab
        - matchLabels:
            app: gitlab-runner
            release: gitlab-runner
            "k8s:io.kubernetes.pod.namespace": gitlab
      toPorts:
        - ports:
            - port: "3900"
              protocol: TCP
